# Universal-NCNN-upscaler-python

./: .gitmodules  README.md  help.py  pyproject.toml  test.py
.github/workflows/: CI-Linux-x64-Clang.yml  CI-Linux-x64-GCC.yml  CI-MacOS-Universal-Clang.yml  CI-Windows-x64-MSVC.yml  Release.yml  test_pip.yml
src/: CMakeLists.txt  span_wrapped.cpp  span_wrapped.h  upscale_wrapped.cpp  upscale_wrapped.h
src/Span-ncnn-vulkan/src/: span.cpp
src/realesrgan_ncnn_py/: __init__.py  realesrgan_ncnn_vulkan.py
src/span-ncnn-vulkan/src/: span.cpp  span.h
src/span_ncnn_py/: __init__.py  span_ncnn_vulkan.py
src/span_ncnn_py/models/CUGAN/models-pro/: up2x-conservative.param  up3x-no-denoise.param
src/span_ncnn_py/models/CUGAN/models-se/: up2x-no-denoise.param  up3x-no-denoise.param  up4x-no-denoise.param
src/span_ncnn_py/models/SHUFFLECUGAN/: sudo_shuffle_cugan-x2.param
src/upscale-ncnn-vulkan/src/: upscale.cpp  upscale.h
src/upscale_ncnn_py/: __init__.py  upscale_ncnn_vulkan.py
src/upscale_ncnn_py/models/CUGAN/models-pro/: up2x-no-denoise.param  up3x-conservative.param  up3x-denoise3x.param
src/upscale_ncnn_py/models/CUGAN/models-se/: up2x-denoise3x.param  up4x-denoise3x.param  up4x-no-denoise.param
tests/: test_realesrgan.py
